services/mysql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels: 
    app: mysql
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
