services/nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    tier: backend
spec:
  selector:
    app: nginx
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    # targetport is the internal port where traffic is sent to
    targetPort: 80
