services/web.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: smt-local
  labels:
    tier: backend
spec:
  selector:
    app: web
    tier: backend
  ports:
  - protocol: TCP
    port: 80
